Address java8 compatible issues in more tests